dataconf = configuration_data()
dataconf.set('BACKGROUNDDIR', backgrounddir)
dataconf.set('datadir', datadir)

backgrounds = [
  'Background01.jpg',
  'Background02.jpg',
  'Background03.jpg',
  'Background04.jpg',
  'Background05.jpg',
  'Background06.jpg',
  'Background07.jpg',
  'Background08.jpg',
  'Background09.jpg',
  'Background10.jpg',
  'Background11.jpg',
  'Background12.jpg',
  'Background13.jpg',
  'Background14.jpg',
  'Background15.jpg',
  'Background16.jpg',
  'Background17.jpg',
  'Background18.jpg',
  'Background19.jpg',
  'Background20.jpg',
  'Background21.jpg',
  'Background22.jpg',
  '다박솔초소의 설경.jpg',
  '대홍단의 감자꽃바다.jpg',
  '더 높이 날아라.jpg',
  '백두산의 해돋이.jpg',
  '백두산천지.jpg',
  '범안리의 선경.jpg',
  '울림폭포의 메아리.jpg',
  '장자강의 불야경.jpg',
  '철령의 철쭉.jpg',
  '푸른 하늘.jpg',
  '풍경화.jpg',
  '한드레벌의 지평선.jpg',
  'Revolutionary.png',
]

install_data(backgrounds, install_dir: backgrounddir)

foreach metadata : [
'Background01.xml',
'Background02.xml',
'Background03.xml',
'Background04.xml',
'Background05.xml',
'Background06.xml',
'Background07.xml',
'Background08.xml',
'Background09.xml',
'Background10.xml',
'Background11.xml',
'Background12.xml',
'Background13.xml',
'Background14.xml',
'Background15.xml',
'Background16.xml',
'Background17.xml',
'Background18.xml',
'Background19.xml',
'Background20.xml',
'Background21.xml',
'Background22.xml',
'Revolutionary.xml',
'다박솔초소의 설경.xml',
'대홍단의 감자꽃바다.xml',
'더 높이 날아라.xml',
'백두산의 해돋이.xml',
'백두산천지.xml',
'범안리의 선경.xml',
'울림폭포의 메아리.xml',
'장자강의 불야경.xml',
'철령의 철쭉.xml',
'푸른 하늘.xml',
'풍경화.xml',
'한드레벌의 지평선.xml']
  configure_file(
    input: metadata + '.in',
    output: metadata,
    configuration: dataconf,
    install: true,
    install_dir: metadatadir
  )
endforeach
